<resources>
    <string name="app_name">Projektas2</string>
    <string name="tekstas">Tekstas</string>
    <string name="skaičiuoti">Skaičiuoti</string>
    <string name="Selection_Char">Simboliai</string>
    <string-array name="tekstas">
        <item>Simboliai</item>
        <item>Žodžiai</item>
    </string-array>
</resources>